# generic-cmake-env

./: .dockerignore  .gitignore  Dockerfile  README.md  env-dockerized.bash  env-local.bash
.devcontainer/: devcontainer.json  docker-compose.yml  initializeCommand.sh
.github/workflows/: documentation.yml
hardware/: generic-cmake-env-hardware1.yml
logic2-presets/: CJMCU-FT232h.logic2Preset
project/: CMakeLists.txt  Dockerfile  openocd.cfg
project/cmake/: dependencies.cmake
project/test_l476/: .mxproject  Makefile  test_l476.ioc
project/test_l476/Core/Inc/: main.h
project/test_l476/Core/Src/: main.c  stm32l4xx_hal_msp.c
